--- a/InfoPlex.html
+++ b/InfoPlex.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INFOPLEX | Search Interface</title>
     
-    <link rel="canonical" href="https://vectorblaze.github.io/infoplex/" />
+    <meta name="google-site-verification" content="PgtBWkOM4JjNJ4-lfJUrWKZ4IOmAE6u57pUMPihLiY4" />
+
+    <link rel="canonical" href="https://YOUR_GITHUB_USERNAME.github.io/infoplex/" />
     <meta name="description" content="INFOPLEX - High-speed search interface with Technox Security and custom themes.">
 
     <link rel="stylesheet" href="InfoPlex-theme.css">
